Fix issue with matrix question text getting cut off in edit mode

--- a/client/src/components/pages/Admin/AdminPortal.css
+++ b/client/src/components/pages/Admin/AdminPortal.css
@@ -662,6 +662,14 @@ color:#f59645;
   overflow-x: hidden;
 }
 
+.matrix .side-border-line {
+  overflow-x: auto;
+}
+
+.question-intro-container {
+  height: fit-content;
+}
+
 .delete-option-button {
   width: 65px !important;
 }
